# WASI

./: .azure-pipelines.yml  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Charter.md  Contributing.md  LICENSE.md  Proposals.md  README.md  command.md  imports.md  optional-imports.md  proxy.md  wasi.bib
.github/: CODEOWNERS  RELEASE.md  labeler.yml
.github/scripts/: README.md  release.sh  stabilize-features.js  validate-proposals.js  validate-since.js
.github/workflows/: CONTRIBUTING.md  ci.yml  labeler.yml  lint-gh.yml  main.yml  publish-proposal.yml  publish.yml  release.yaml  release.yml
ci/: azure-build-release.yml
design/: WASI-core.md  application-abi.md  file-descriptors.md  optional-imports.md  resources-and-handles.md  witx-type-representation.md
design/wasi_unstable/: typenames.widl  typenames.witx  wasi_unstable.wati  wasi_unstable.witx
docs/: Capabilities.md  Contributing.md  DesignPrinciples.md  HighLevelGoals.md  Preview2.md  Process.md  Proposals.md  README.md  Testing.md  WASI-design-principles.md  WASI-overview.md  WitInWasi.md  virtualization.md  wasi-core.capnp
legacy/: README.md  application-abi.md
legacy/preview0/: docs.md
legacy/preview1/: docs.html  docs.md
legacy/tools/: repo_docs.sh  witx-docs.md
meetings/: README.md
meetings/2019/: WASI-05-02.md  WASI-05-16.md  WASI-06-27.md  WASI-07-18.md  WASI-08-15.md  WASI-08-30.md  WASI-09-26.md  WASI-10-15.md  WASI-11-07.md  WASI-11-21.md  WASI-12-05.md  WASI-12-19.md  WASI-liftoff.md
meetings/2020/: WASI-01-16.md  WASI-02-27.md  WASI-03-12.md  WASI-03-26.md  WASI-05-21.md  WASI-06-04.md  WASI-07-16.md  WASI-07-30.md  WASI-09-10.md  WASI-10-08.md  WASI-10-22.md  WASI-11-19.md  WASI-12-17.md
meetings/2021/: WASI-01-28.md  WASI-02-11.md  WASI-02-25.md  WASI-03-11.md  (+13 more)
phases/: README.md
preview0/: docs.md
preview1/: docs.html  docs.md
preview2/: README.md
proposal-template/: README.md
proposals/: README.md
proposals/clocks/tools/witx/: Cargo.toml  LICENSE
proposals/clocks/tools/witx/cli/src/: main.rs
proposals/clocks/tools/witx/src/: ast.rs  coretypes.rs  docs.rs  layout.rs  lib.rs  main.rs  parser.rs  polyfill.rs  render.rs  representation.rs  toplevel.rs  validate.rs
proposals/clocks/tools/witx/src/docs/: ast.rs  md.rs  mod.rs
proposals/clocks/tools/witx/tests/: anonymous.rs  multimodule.rs  union.rs
proposals/clocks/tools/witx/tests/multimodule/: type_a.witx
proposals/clocks/tools/witx/tests/witxt/: anonymous.witxt  representation.witxt
proposals/random/tools/witx/: Cargo.toml
proposals/random/tools/witx/src/: ast.rs  coretypes.rs  docs.rs  io.rs  layout.rs  lexer.rs  lib.rs  parser.rs  render.rs  representation.rs  toplevel.rs  validate.rs
proposals/random/tools/witx/src/docs/: ast.rs  md.rs  mod.rs
proposals/random/tools/witx/tests/: union.rs  wasi.rs  wasi_unstable.rs
proposals/random/tools/witx/tests/witxt/multimodule/: redefine_a.witx
schema/: READMD.md  README.md  wasi-args.capnp  wasi-clock.capnp  wasi-common.capnp  wasi-env.capnp  wasi-events.capnp  wasi-fd.capnp  wasi-fs.capnp  wasi-proc.capnp
scripts/: wasi-deps.sh
snapshots/: README.md  make-snapshot.sh
test/: minimal-command.wasm
tools/: Cargo.toml  repo_docs.sh  witx-docs.md
tools/wasi-spec/: Cargo.toml  build.rs
tools/witx/: Cargo.toml
tools/witx-cli/: Cargo.toml
tools/witx-cli/src/: main.rs
tools/witx-frontend/: Cargo.toml
tools/witx-frontend/src/: ast.rs  lib.rs  main.rs  parser.rs  sexpr.rs  toplevel.rs  validate.rs
tools/witx-frontend/tests/: wasi_unstable.rs
tools/witx/cli/: Cargo.toml
tools/witx/cli/src/: main.rs
tools/witx/examples/: witx.rs
tools/witx/fuzz/: Cargo.toml
tools/witx/fuzz/fuzz_targets/: abi.rs  parse.rs
tools/witx/src/: abi.rs  ast.rs  c_header.rs  coretypes.rs  docs.rs  io.rs  layout.rs  lib.rs  main.rs  moduletype.rs  parser.rs  phases.rs  polyfill.rs  render.rs  representation.rs  sexpr.rs  toplevel.rs  validate.rs
tools/witx/src/docs/: ast.rs  md.rs  mod.rs
tools/witx/tests/: anonymous.rs  multimodule.rs  simple_multimodule.rs  union.rs  wasi-docs.rs  wasi.rs  wasi_unstable.rs  witxt.rs
tools/witx/tests/multimodule/: type_b.witx  type_c.witx
tools/witx/tests/witxt/: abi-next.witxt  abi.witxt  anonymous.witxt  multimodule.witxt  representation.witxt  resources.witxt  shorthand.witxt  simple.witxt  snapshot_0.witx  snapshot_preview1.witx  union.witxt  wasi.witxt
tools/witx/tests/witxt/multimodule/: redefine_a.witx  structured.witx  type_a.witx  type_b.witx  type_c.witx  use_of_structured.witx
tools/witx/tests/witxt/resources/: multi.witx  other.witx
wasip2/: README.md
watidl/: wasi-core.watidl  watidl.md
(+549 files in other folders)
