[package]
name = "witx-cli"
version = "0.9.1"
description = "CLI for operating on witx file format"
homepage = "https://github.com/WebAssembly/WASI"
repository = "https://github.com/WebAssembly/WASI"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
authors = ["Pat Hickey <phickey@fastly.com>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[[bin]]
name = "witx"
path = "src/main.rs"

[dependencies]
witx = { path = "../witx", version = "0.9.1" }
anyhow = "1"
log = "0.4"
thiserror = "1.0"
diff = "0.1.11"
pretty_env_logger = "0.4"
structopt = "0.3"
rayon = "1.0"
