[package]
name = "witx"
version = "0.7.0"
description = "Parse and validate witx file format"
homepage = "https://github.com/WebAssembly/WASI"
repository = "https://github.com/WebAssembly/WASI"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
authors = ["Pat Hickey <phickey@fastly.com>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "witx"
path = "src/main.rs"

[dependencies]
clap = "2"
wast = "3.0.4"
thiserror = "1.0"
