[package]
name = "witx"
version = "0.8.8"
description = "Parse and validate witx file format"
homepage = "https://github.com/WebAssembly/WASI"
repository = "https://github.com/WebAssembly/WASI"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
authors = ["Pat Hickey <phickey@fastly.com>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1.0"
wast = { version = "22.0.0", default-features = false }

[dev-dependencies]
diff = "0.1.11"
pretty_env_logger = "0.4"
structopt = "0.3"
